--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('user.user_login.login') }}">Login</a>
+          <a class="nav-link" href="{{ url_for('user.login') }}">Login</a>
         </li>
       </ul>
     </div>
