--- a/templates/code.html
+++ b/templates/code.html
@@ -4,14 +4,16 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.css" integrity="sha512-uf06llspW44/LZpHzHT6qBOIVODjWtv4MxCricRxkzvopAlSWnTf6hpZTFxuuZcuNE9CBQhqE0Seu1CoRk84nQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 {% endblock %}
 
-{% block title %}Edita tu código colega{% endblock %}
+{% block title %}Edita tu código{% endblock %}
 
 {% block content %}
 <h1>Python Code Editor</h1>
 <form method="POST">
-    <textarea id="code" name="code">{{ code }}</textarea>
-    <br>
-    <button type="submit">Send</button>
+    <div class="form-group">
+        <textarea id="code" name="code">{{ code }}</textarea>
+        <br>
+        <button type="submit" class="btn btn-primary">Send</button>
+    </div>
 </form>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.js" integrity="sha512-8RnEqURPUc5aqFEN04aQEiPlSAdE0jlFS/9iGgUyNtwFnSKCXhmB6ZTNl7LnDtDWKabJIASzXrzD0K+LYexU9g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -23,5 +25,6 @@
         mode: 'python',
         theme: 'default'
     });
+    editor.setSize(null, "500px");
 </script>
 {% endblock %}
