--- a/templates/code.html
+++ b/templates/code.html
@@ -14,6 +14,11 @@
         <br>
         <button type="submit" class="btn btn-primary">Send</button>
     </div>
+    {% if error %}
+    <div class="error" role="alert">
+        {{ error }}
+    </div>
+    {% endif %}
 </form>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.js" integrity="sha512-8RnEqURPUc5aqFEN04aQEiPlSAdE0jlFS/9iGgUyNtwFnSKCXhmB6ZTNl7LnDtDWKabJIASzXrzD0K+LYexU9g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
