--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 
-  <title>{% block title %}Flask App{% endblock %}</title>
+  <title>{% block title %}BattleSnake Avast{% endblock %}</title>
   {% block head %}{% endblock %}
 </head>
 
