--- a/templates/login.html
+++ b/templates/login.html
@@ -3,13 +3,13 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<h1 class="mt-5">Login</h1>
+<h1 class="mt-5">AVAST BattleSnake</h1>
 <form class="login-form" method="POST" action="{{ url_for('user.login') }}">
   <div class="form-group">
-    <label for="username">Username</label>
-    <input type="text" class="form-control" id="username" name="username" placeholder="Enter username">
+    <label for="username">Usuario:</label>
+    <input type="text" class="form-control" id="username" name="username" placeholder="Introduce tu nombre de usuario">
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">Entrar</button>
 </form>
 {% with messages = get_flashed_messages(with_categories=true) %}
   {% if messages %}
