--- a/static/style.css
+++ b/static/style.css
@@ -53,13 +53,25 @@ button:hover {
   flex: 1;
 }
 
-/* .CodeMirror {
-  border: 1px solid #eee;
-  height: auto;
+.collapsible {
+  background-color: #f9f9f9;
+  color: #333;
+  cursor: pointer;
+  padding: 10px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
 }
 
-.CodeMirror {
-  height: 500px;
-  width: 100%;
-} */
+.active, .collapsible:hover {
+  background-color: #ccc;
+}
 
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
+}
